[package]
name = "gate-rust-sdk"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"